--- a/manifest/app1/deployment.yaml
+++ b/manifest/app1/deployment.yaml
@@ -2,6 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: node-app1-deployment
+  annotations:
+    dora.dev/source-commit: 44cd015bc830e402f11e098d82e49008fe822f4f
 spec:
   replicas: 2
   selector:
@@ -11,10 +13,12 @@ spec:
     metadata:
       labels:
         app: node-app1
+      annotations:
+        org.opencontainers.image.revision: 44cd015bc830e402f11e098d82e49008fe822f4f
     spec:
       containers:
         - name: node-app1
-          image: ens19kav/my-app:PLACEHOLDER
+          image: ens19kav/my-app:44cd015bc830e402f11e098d82e49008fe822f4f
           ports:
             - containerPort: 3000
           readinessProbe:
