Revert "FAULT (cycle 1): readinessProbe broken (sim-readiness-run=20251103182248)"
This reverts commit d2e56754eae80c4c07cd3882c7701f71f2653b7d.

--- a/manifest/app2/deployment.yaml
+++ b/manifest/app2/deployment.yaml
@@ -15,7 +15,6 @@ spec:
         app: node-app2
       annotations:
         org.opencontainers.image.revision: 4d21631acad79c7ea2d7ad1634edb81f8c02ccc8
-        sim-readiness-run: "20251103182248"
     spec:
       containers:
         - name: node-app2
@@ -24,7 +23,7 @@ spec:
             - containerPort: 3000
           readinessProbe:
             httpGet:
-              path: /nonexistent-health
+              path: /
               port: 3000
             initialDelaySeconds: 5
             periodSeconds: 5
