--- a/manifest/app1/deployment.yaml
+++ b/manifest/app1/deployment.yaml
@@ -15,6 +15,7 @@ spec:
         app: node-app1
       annotations:
         org.opencontainers.image.revision: c23ca69b362d215904944374754e5c265dfd01d0
+        sim-readiness-run: "20251103184827"
     spec:
       containers:
         - name: node-app1
@@ -23,7 +24,7 @@ spec:
             - containerPort: 3000
           readinessProbe:
             httpGet:
-              path: /
+              path: /nonexistent-health
               port: 3000
             initialDelaySeconds: 5
             periodSeconds: 5
