Update app1 image to main-10

--- a/manifest/app1/deployment.yaml
+++ b/manifest/app1/deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: node-app1-deployment
   annotations:
-    dora.dev/source-commit: 5a576ebbcd7869e51025bc13bd4b58c18065d0c3
+    dora.dev/source-commit: ec57311d6d5026f9bd407221c8463f4ea34226b7
 spec:
   replicas: 2
   selector:
@@ -14,11 +14,11 @@ spec:
       labels:
         app: node-app1
       annotations:
-        org.opencontainers.image.revision: 5a576ebbcd7869e51025bc13bd4b58c18065d0c3
+        org.opencontainers.image.revision: ec57311d6d5026f9bd407221c8463f4ea34226b7
     spec:
       containers:
         - name: node-app1
-          image: ens19kav/my-app:5a576ebbcd7869e51025bc13bd4b58c18065d0c3
+          image: ens19kav/my-app:main-10
           ports:
             - containerPort: 3000
           readinessProbe:
