--- a/manifest/app2/deployment.yaml
+++ b/manifest/app2/deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: node-app2-deployment
   annotations:
-    dora.dev/source-commit: e2f85d4a53da84e094844ac7850cc9999ea04e67
+    dora.dev/source-commit: d8ca340dc72132c0f90df726bb4b4e2782c8de45
 spec:
   replicas: 2
   selector:
@@ -14,11 +14,11 @@ spec:
       labels:
         app: node-app2
       annotations:
-        org.opencontainers.image.revision: e2f85d4a53da84e094844ac7850cc9999ea04e67
+        org.opencontainers.image.revision: d8ca340dc72132c0f90df726bb4b4e2782c8de45
     spec:
       containers:
         - name: node-app2
-          image: ens19kav/my-app2:e2f85d4a53da84e094844ac7850cc9999ea04e67
+          image: ens19kav/my-app2:main-9
           ports:
             - containerPort: 3000
           readinessProbe:
