--- a/manifest/app3/deployment.yaml
+++ b/manifest/app3/deployment.yaml
@@ -13,7 +13,6 @@ spec:
         app: node-app3
       annotations:
         org.opencontainers.image.revision: 80966253384bdd37d04d54d39848d193d33cb30c
-        sim-readiness-run: "20251202110258"
     spec:
       containers:
         - name: node-app3
@@ -22,7 +21,7 @@ spec:
             - containerPort: 3000
           readinessProbe:
             httpGet:
-              path: /nonexistent-health
+              path: /
               port: 3000
             initialDelaySeconds: 5
             periodSeconds: 5
