--- a/manifest/app1/deployment.yaml
+++ b/manifest/app1/deployment.yaml
@@ -13,6 +13,7 @@ spec:
         app: node-app1
       annotations:
         org.opencontainers.image.revision: 04023416d4839da6950f55c99a20a5cadb7c69dc
+        sim-readiness-run: "20251202135312"
     spec:
       containers:
         - name: node-app1
@@ -21,7 +22,7 @@ spec:
             - containerPort: 3000
           readinessProbe:
             httpGet:
-              path: /
+              path: /nonexistent-health
               port: 3000
             initialDelaySeconds: 5
             periodSeconds: 5
