Revert "FAULT (cycle 2): readinessProbe broken (sim-readiness-run=20251202144444)"
This reverts commit 87d8a6936402f1e03846bb48679b916bd75d51df.

--- a/manifest/app2/deployment.yaml
+++ b/manifest/app2/deployment.yaml
@@ -13,7 +13,6 @@ spec:
         app: node-app2
       annotations:
         org.opencontainers.image.revision: d7d3047bccc5c71bcd4f5a05722521d23ca71abf
-        sim-readiness-run: "20251202144444"
     spec:
       containers:
         - name: node-app2
@@ -22,7 +21,7 @@ spec:
             - containerPort: 3000
           readinessProbe:
             httpGet:
-              path: /nonexistent-health
+              path: /
               port: 3000
             initialDelaySeconds: 5
             periodSeconds: 5
