--- a/manifest/app3/deployment.yaml
+++ b/manifest/app3/deployment.yaml
@@ -13,7 +13,6 @@ spec:
         app: node-app3
       annotations:
         org.opencontainers.image.revision: 99eaf1d8d9558bd377b850fbf189da58e904f216
-        sim-readiness-run: "20251202161442"
     spec:
       containers:
         - name: node-app3
@@ -22,7 +21,7 @@ spec:
             - containerPort: 3000
           readinessProbe:
             httpGet:
-              path: /nonexistent-health
+              path: /
               port: 3000
             initialDelaySeconds: 5
             periodSeconds: 5
