Revert "FAULT (cycle 5): readinessProbe broken (sim-readiness-run=20251207160205)"
This reverts commit 85379c2e429e00ee30db1d9ae8cef43f999c8506.

--- a/manifest/app2/deployment.yaml
+++ b/manifest/app2/deployment.yaml
@@ -13,7 +13,6 @@ spec:
         app: node-app2
       annotations:
         org.opencontainers.image.revision: fa3f66b6e6a42aacd8a66a386979b8c35620db1a
-        sim-readiness-run: "20251207160205"
     spec:
       containers:
         - name: node-app2
@@ -22,7 +21,7 @@ spec:
             - containerPort: 3000
           readinessProbe:
             httpGet:
-              path: /nonexistent-health
+              path: /
               port: 3000
             initialDelaySeconds: 5
             periodSeconds: 5
